--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "saveboard"
+description = "A CLI app for saving images from your clipboard"
+authors = ["Clay66"]
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0"
+readme = "README.md"
+repository = "https://github.com/Clay-6/Saveboard"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
